--- a/plumber-site/package.json
+++ b/plumber-site/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "framer-motion": "^12.30.1",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
